Show proper exception when trying to allocate a disguised struct

Instead of a simple "MemoryError" with no details, raise a proper
TypeError with a traceback and an explanation what happened.

https://bugzilla.gnome.org/show_bug.cgi?id=639972